--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "knex": "^0.20.4"
+    "knex": "^0.20.4",
+    "pg": "^7.14.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
