--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "babel-node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "migrate-test": "knex migrate:latest --env test",
+    "migrate": "knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -25,7 +27,11 @@
     "pg": "^7.14.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.5",
+    "@babel/preset-env": "^7.7.6",
     "babel-cli": "^6.26.0",
-    "babel-preset-node6": "^11.0.0"
+    "babel-jest": "^24.9.0",
+    "babel-preset-node6": "^11.0.0",
+    "jest": "^24.9.0"
   }
 }
