--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.3.0",
     "knex": "^0.20.4",
     "pg": "^7.14.0"
   },
