--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/jgecen/lojinha#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cpf-check": "^3.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.3.0",
     "knex": "^0.20.4",
